# ibc_data_extractor

./: .gitignore  README.md  pyproject.toml
src/ibc_data_extractor/: __main__.py  cli.py  config.py  downloader.py  logger.py  outputter.py  processor.py
tests/: test_processor.py
