[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibc_data_extractor"
version = "0.1.0"
description = "A utility to extract IBC chain data from GitHub repositories."
authors = [
    { name = "qf3l3k | ChainTools", email = "contact@chaintools.tech" }
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
dependencies = [
    "pandas>=1.1.5",
    "requests>=2.24.0",
    "pytest>=5.4",
    "openpyxl>=3.0.7"
]

[project.scripts]
ibc_data_extractor = "ibc_data_extractor.__main__:main"
